removed overflow possible clipping bug

--- a/css/tailwind.scss
+++ b/css/tailwind.scss
@@ -253,8 +253,3 @@ h6,
     z-index: 10;
   }
 }
-
-#__next {
-  overflow-x: hidden;
-  overflow-y: auto;
-}
